import fizzbuzz can exe

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "npm-monorepo-test",
-  "private": true
+  "private": true,
+  "workspaces": [
+    "packages",
+    "apps",
+    "packages/fizzbuzz"
+  ]
 }
